# tengra

./: .bundlewatch.config.json  .env.example  .gitignore  .gitmodules  .npmrc  .prettierrc.json  .secretlintignore  .secrets.baseline  .stylelintrc.json  AGENTS.md  AI_RULES.md  API.md  APP_HEALTH_REPORT.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GUIDE.md  I18N_GUIDE.md  MCP_SERVICES.md  NOTICE  OSS_CHECKLIST.md  PROXY_EMBED.md  README.md  ROADMAP.md  SECURITY.md  TEMA_i18n_DETAYLI_RAPOR.md  TENGRA_DIAGRAM.md  TODO.md  advanced-hardening.md  chats_schema.sql  clean_mocks.js  components.json  enforcement.md  eslint.boundaries.js  eslint.config.mjs  eslint_debug_2.txt  (+56 more)
.claude/: CLAUDE.md  settings.local.json
.codex/: AGENTS.md  AI_RULES.md  MANAGED_RUNTIME.md  MASTER_COMMANDMENTS.md  PROJECT_STRUCTURE.md  RENDERER_CODE_EDITOR_COMPONENT_PERFORMANCE_BUDGET.md  RENDERER_CODE_EDITOR_COMPONENT_RUNBOOK.md  RENDERER_CODE_EDITOR_COMPONENT_THREAT_MODEL.md  RENDERER_LANGUAGE_SELECTION_PROMPT_PERFORMANCE_BUDGET.md  RENDERER_LANGUAGE_SELECTION_PROMPT_RUNBOOK.md  RENDERER_LANGUAGE_SELECTION_PROMPT_THREAT_MODEL.md  RENDERER_MCP_SETTINGS_TAB_PERFORMANCE_BUDGET.md  RENDERER_MCP_SETTINGS_TAB_RUNBOOK.md  RENDERER_MCP_SETTINGS_TAB_THREAT_MODEL.md  RENDERER_NOTIFICATION_CENTER_STORE_PERFORMANCE_BUDGET.md  RENDERER_NOTIFICATION_CENTER_STORE_RUNBOOK.md  RENDERER_NOTIFICATION_CENTER_STORE_THREAT_MODEL.md  RENDERER_SETTINGS_RUNBOOK.md  RENDERER_SETTINGS_THREAT_MODEL.md  RENDERER_SSH_MANAGER_RUNBOOK.md  RENDERER_SSH_MANAGER_THREAT_MODEL.md  RENDERER_TERMINAL_TOOLBAR_PERFORMANCE_BUDGET.md  RENDERER_TERMINAL_TOOLBAR_RUNBOOK.md  RENDERER_TERMINAL_TOOLBAR_THREAT_MODEL.md  context.md
.copilot/: COPILOT.md
.gemini/: GEMINI.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.husky/: pre-commit
appendonlydir/: appendonly.aof.1.base.rdb
codex/: context.md
docs/: AGENTS.md  AGENT_ENGINEERING.md  AI_RULES.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODEBASE_STATUS.md  CODE_OF_CONDUCT.md  CODING_STYLE_GUIDE.md  CONFIG.md  CONTRIBUTING.md  CRITICAL_NOTICE.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  FULL_TODO.md  GAP_ANALYSIS.md  GUIDE.md  HUGGINGFACE_CONVERSION.md  HUGGINGFACE_VERSIONING_AND_FINETUNE.md  I18N_GUIDE.md  IPC.md  IPC_CHANNELS.md  IPC_SCHEMAS.md  IPC_SCHEMA_MIGRATION.md  LINT_ISSUES.md  MANAGED_RUNTIME.md  MARKETPLACE_SETUP.md  MASTER_COMMANDMENTS.md  MCP.md  MCP_SERVERS.generated.md  MODEL_ARCHITECTURE.md  MULTI_LLM_ARCHITECTURE.md  PERFORMANCE_CONTRACT.md  PRD.md  PROJECT.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  (+34 more)
src/native/: Cargo.toml  README.md
src/native/db-service/: Cargo.toml
src/native/db-service/src/: database.rs  lib.rs  main.rs  server.rs  types.rs
src/native/db-service/src/db/: chats.rs  knowledge.rs  migrations.rs  mod.rs  system.rs  workspaces.rs
src/native/db-service/src/handlers/: chats.rs  knowledge.rs  marketplace.rs  mod.rs  projects.rs  system.rs  workspaces.rs
src/native/db-service/tests/: database_tests.rs
src/native/memory-service/: Cargo.toml
src/native/memory-service/src/: main.rs
src/native/model-service/: Cargo.toml
src/native/model-service/src/: main.rs
src/native/quota-service/: Cargo.toml
src/native/quota-service/src/: main.rs
src/native/tengra-proxy/: ARCHITECTURE.md  Cargo.toml  check.json
src/native/tengra-proxy/scratch/: test_nvidia_norm.rs
src/native/tengra-proxy/src/: lib.rs  main.rs  static_config.rs
src/native/tengra-proxy/src/analysis/: ast.rs  conflict_resolver.rs  lsp_manager.rs  mod.rs
src/native/tengra-proxy/src/auth/: mod.rs  session.rs
src/native/tengra-proxy/src/auth/antigravity/: client.rs  mod.rs  server.rs  types.rs
src/native/tengra-proxy/src/auth/claude/: client.rs  mod.rs  server.rs  types.rs
src/native/tengra-proxy/src/auth/codex/: client.rs  mod.rs  pkce.rs  server.rs  types.rs
src/native/tengra-proxy/src/auth/common/: mod.rs
src/native/tengra-proxy/src/auth/copilot/: client.rs  mod.rs  types.rs
src/native/tengra-proxy/src/auth/cursor/: client.rs  mod.rs
src/native/tengra-proxy/src/auth/ollama/: client.rs  mod.rs
src/native/tengra-proxy/src/db/: accounts.rs  client.rs  metadata.rs  mod.rs  support.rs  tokens.rs
src/native/tengra-proxy/src/proxy/: antigravity.rs  mod.rs  model_catalog.rs  model_service.rs  server.rs  skills.rs  types.rs
src/native/tengra-proxy/src/proxy/handlers/: claude.rs  completions.rs  embeddings.rs  management.rs  management_support.rs  mcp.rs  mod.rs  models.rs  responses.rs  skills.rs  terminal.rs  tools.rs
src/native/tengra-proxy/src/proxy/handlers/chat/: antigravity.rs  compact.rs  cursor.rs  dispatch.rs  headers.rs  mod.rs  rate_limit.rs  request.rs  request_claude.rs  request_codex.rs  request_gemini.rs  request_openai.rs  request_support.rs  response.rs  stream.rs  stream_claude.rs  stream_copilot.rs  stream_cursor.rs  stream_gemini.rs  stream_support.rs  support.rs
src/native/tengra-proxy/src/proxy/handlers/chat/compat/: mod.rs  openai.rs  requests.rs
src/native/tengra-proxy/src/proxy/model_service/: anthropic.rs  antigravity.rs  copilot.rs  cursor.rs  gemini.rs  nvidia.rs  openai.rs  static_models.rs  support.rs
src/native/tengra-proxy/src/quota/: antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  mod.rs  nvidia.rs  types.rs
src/native/tengra-proxy/src/security/: mod.rs  path_policy.rs
src/native/tengra-proxy/src/terminal/: manager.rs  mod.rs  session.rs
src/native/tengra-proxy/src/token/: mod.rs  refresh.rs
src/native/tengra-proxy/src/tools/: crawler.rs  filesystem.rs  git.rs  internet.rs  llm.rs  mcp.rs  mod.rs  network.rs  search.rs  system.rs  terminal.rs  web.rs  workspace.rs
src/native/token-service/: Cargo.toml
src/native/token-service/src/: main.rs
src/services/db-service/: Cargo.toml
src/services/db-service/src/: database.rs  main.rs  server.rs  types.rs
src/services/db-service/src/handlers/: mod.rs
src/services/memory-service/: Cargo.toml
src/services/memory-service/src/: main.rs
(+4178 files in other folders)
