[workspace]
members = [
    "memory-service",
    "db-service",
    "tengra-proxy"
]
resolver = "2"

[workspace.package]
version = "1.0.58"
edition = "2021"
authors = ["TengraStudio"]
license = "GPL-3.0"

[profile.release]
strip = true
opt-level = 2
lto = "thin"
codegen-units = 16

[profile.fast-release]
inherits = "release"
strip = true
opt-level = 1
lto = false
codegen-units = 32
