[package]
name = "tengra-db-service"
version = "0.1.0"
edition = "2021"
description = "Tengra Database Service - Windows Service hosting SQLite database"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Database - SQLite with vector extension
rusqlite = { version = "0.31.0", features = ["bundled", "blob"] }

# Vector operations
bincode = "1.3"

# Windows Service
windows-service = "0.6"

# Utilities
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5.0"
base64 = "0.21"

[[bin]]
name = "tengra-db-service"
path = "src/main.rs"


