[package]
name = "tengra-memory-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4"
bincode = "1.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
directories = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

