[package]
name = "tengra-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = "9.0"
url = "2.5"
urlencoding = "2.1"
open = "5.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
chrono = "0.4.44"
aes-gcm = "0.10"
winapi = { version = "0.3", features = ["wincrypt", "winuser", "dpapi", "winbase"] }
hex = "0.4"
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1.10", features = ["v4"] }
bytes = "1.10"
async-stream = "0.3"
http-body-util = "0.1"
serde_urlencoded = "0.7"
