[package]
name = "tengra-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = "9.0"
url = "2.5"
urlencoding = "2.1"
open = "5.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
chrono = "0.4.44"
aes-gcm = "0.10"
winapi = { version = "0.3", features = ["wincrypt", "winuser", "dpapi", "winbase"] }
hex = "0.4"
portable-pty = "0.9.0"
parking_lot = "0.12"
dashmap = "6.0"
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1.10", features = ["v4"] }
bytes = "1.10"
async-stream = "0.3"
http-body-util = "0.1"
serde_urlencoded = "0.7"
scraper = "0.20"
git2 = "0.19"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
grep = "0.3"
sysinfo = "0.31"
walkdir = "2.5"
zip = "2.2"
regex = "1.10"
tempfile = "3.10"
