[package]
name = "tengra-token-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
directories = "5.0"

