[package]
name = "tandem-memory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = "0.4"
bincode = "1.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
directories = "5.0"
